兼容springfox升级到2.10.5